--- a/client/src/components/common/auth/enquiry/CourseEnquiry.css
+++ b/client/src/components/common/auth/enquiry/CourseEnquiry.css
@@ -1,5 +1,5 @@
 .course-enquiry-form{
-    padding-top: 100px;
+    padding-top: 120px;
     padding-bottom: 60px;
     display: flex;
     justify-content:center;
@@ -11,10 +11,11 @@
     align-items: center;
 }
 .course-enquiry-form-contents{
-    width: 30%;
+    width: 450px;
     padding: 48px 32px;
     border: 1px solid #e4e4e4;
     border-radius: 24px;
+    box-shadow: 0px 0px 5px 0px rgb(227 222 222);
 }
 .enquiryform{
     width: 100%;
@@ -36,8 +37,8 @@
 
 .enquiry-fname, .enquiry-lname, .enquiry-email, .enquiry-phone{
     width: 100%;
-    height: 40px;
-    padding: 8px;
+    height: 45px;
+    padding: 12px;
     font-size: 16px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -55,6 +56,8 @@
     border-radius: 8px;
     background-color:  var( --h-text-w-clr);  
     height: 100px;
+    max-height: 200px;
+    max-width: 100%;
 }
 .enquiry-fname:focus, .enquiry-lname:focus, .enquiry-email:focus, .enquiry-phone:focus, .enquiry-message:focus{
 outline-style: none;
