--- a/client/src/components/course-page/s-course-page/CoursePage.css
+++ b/client/src/components/course-page/s-course-page/CoursePage.css
@@ -446,7 +446,7 @@
 }
 .course-syllabus-accordion{
     width: 100%;
-    padding: 20px;
+    padding: 20px 24px;
     display: flex;
     flex-direction: column;
     gap:1rem;
@@ -467,6 +467,7 @@
     color:var(--h-text-b-clr);
 }
 .syllabus-accordion-contents p{
+    padding-right: 12px;
     font-size: 16px;
     font-weight: 400;
     line-height: 150%;
@@ -476,7 +477,21 @@
 .rotated {
     transform: rotate(180deg);
   }
- 
+  .course-view-container{
+      display: flex;
+      justify-content: center;
+  }
+  .course-view-container button{
+    background-color: inherit;
+    border: 0;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: var( --p-font);
+    color:var(--trafy-purple);
+  }
+  .course-view-container button:hover{
+    color:var(--p-text-b-clr);
+  }
   @media only screen and (max-width:1024px){
     .course-syllabus-container {
         padding-left: 0;
@@ -709,25 +724,24 @@
     color:var(--h-text-b-clr);
   }
   .course-certificate-contents{
-    /* display: flex;
-    gap:3rem; */
+    
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: max-content;
-    border: 1px solid #e4e4e4;
-    border-radius: 16px;
-    background-color: var( --h-text-w-clr);
+    gap:2.5rem;
   }
   .course-certificate-image{
-    width:100%;
+    /* width:100%;
     max-height: 350px;
-    min-height: 200px;
+    min-height: 200px; */
+    border: 1px solid #e4e4e4;
+    border-radius: 16px;
   }
   .course-certificate-image img{
     width:100%;
     height: 100%;
-    border-top-left-radius: 16px;
-    border-bottom-left-radius: 16px;
+    border-radius: 16px;
+   
   }
   .course-certificate-description{
     display: flex;
@@ -764,18 +778,18 @@
     }
     .course-certificate-image img{
         border-radius: 16px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
     }
   }
  
   @media only screen and (max-width:600px){
+    
     .course-certificate-container{
         padding-left: 0;
         width: 85%;
     }
     .course-certificate-contents{
         flex-direction: column;
+        gap:2rem;
     }
     .course-certificate-description{
         width: 100%;
@@ -831,6 +845,7 @@
     color:var(--h-text-b-clr);
 }
 .faq-accordion-contents p{
+    padding-right: 12px;
     font-size: 16px;
     font-weight: 400;
     color:var(--p-text-b-clr);
@@ -999,6 +1014,9 @@
 @media only screen and (max-width:600px){
     .course-payment-container {
         width: 90%;
+    }
+    .course-certificate-description{
+        padding: 0;
     }
 }
 @media only screen and (max-width:420px){
