--- a/client/src/components/course-page/dm-course-page/CoursePage.css
+++ b/client/src/components/course-page/dm-course-page/CoursePage.css
@@ -553,6 +553,7 @@
     overflow: hidden;
   }
   .project-box h3{
+    background-color: #fad5a4;
     font-size: 16px;
     font-weight: 600;
     font-family: var( --p-font);
