--- a/client/src/components/course-page/s-course-page/CoursePage.css
+++ b/client/src/components/course-page/s-course-page/CoursePage.css
@@ -552,7 +552,8 @@
     max-height: 170px;
     overflow: hidden;
   }
-  .project-box h3{
+  .project-box-s h3{
+    background-color: #D9CEFB;
     font-size: 16px;
     font-weight: 600;
     font-family: var( --p-font);
