--- a/client/src/components/course-page/dm-course-page/CoursePage.css
+++ b/client/src/components/course-page/dm-course-page/CoursePage.css
@@ -826,7 +826,7 @@
 }
 .course-faq-accordion{
     width: 100%;
-    padding: 16px;
+    padding: 20px 24px;
     display: flex;
     flex-direction: column;
     border: 1px solid #e4e4e4;
