--- a/client/src/components/course-page/s-course-page/CoursePage.css
+++ b/client/src/components/course-page/s-course-page/CoursePage.css
@@ -533,7 +533,7 @@
     grid-template-columns: repeat(3,1fr);
     gap:2rem;
   }
-  .project-box{
+  .project-box-s{
     width: 100%;
     max-height: 350px;
     min-height: 250px;
@@ -826,7 +826,7 @@
 }
 .course-faq-accordion{
     width: 100%;
-    padding: 16px;
+    padding: 20px 24px;
     display: flex;
     flex-direction: column;
     border: 1px solid #e4e4e4;
