--- a/client/src/components/blog-page/blog-page/BlogPage.css
+++ b/client/src/components/blog-page/blog-page/BlogPage.css
@@ -8,8 +8,8 @@
     margin: 0;
 }
 .blog-page-hero-section{
-    padding-top: 120px;
-    padding-bottom: 60px;
+    padding-top: 140px;
+    padding-bottom: 80px;
 width: 100%;
 display: flex;
 justify-content: center;
@@ -18,7 +18,7 @@ justify-content: center;
     width: 55%;
     display: flex;
     flex-direction: column;
-    gap:1.5rem;
+    gap:2rem;
 
 }
 .blog-page-hero-section-category{
@@ -42,7 +42,7 @@ justify-content: center;
     font-family: 'Inter',sans-serif;
     color: #1c1623;
     font-weight: 600;
-    line-height: 150%;
+    line-height: 130%;
    margin: 0;
 }
 .blog-page-hero-section-author{
@@ -61,6 +61,7 @@ justify-content: center;
     font-family: 'Inter',sans-serif;
     color: #3f3f3f;
     font-weight: 400;
+    line-height: 150%;
     margin: 0;
 }
 .blog-page-article-section{
@@ -72,6 +73,7 @@ justify-content: center;
 }
 .blog-page-table-of-contents{
     padding:0px 60px;
+    padding-right: 100px;
     width: max-content;
     height: max-content;
     position: sticky;
@@ -117,6 +119,11 @@ justify-content: center;
 .blog-page-article-socials{
     display: flex;
     gap:1rem;
+    align-items: center;
+    font-size: 16px;
+    font-family: 'Inter',sans-serif;
+    color: #3f3f3f;
+    font-weight: 500;
 }
 .blog-page-article-description p{
     font-size: 18px;
@@ -168,11 +175,19 @@ justify-content: center;
     color: #1c1623;
     font-weight: 500;
 }
+.blog-newsletter-form{
+    width: 100%;
+}
+.blog-newsletter-form form{
+    display: flex;
+    justify-content: center;
+
+}
 .blog-newsletter-form input{
     border: 1px solid #d4cfcf;
     border-radius: 8px;
-    width: 380px;
-    height: 35px;
+    width: 80%;
+    height: 40px;
     padding: 4px 8px;
     font-size: 14px;
 }
@@ -227,18 +242,34 @@ justify-content: center;
     .blog-page-hero-section-container, .blog-page-article-contents, .blog-newsletter-container{
         width: 80%;
     }
-    .blog-newsletter-container-inner{
-        align-items: flex-start;
-    }
-    .blog-newsletter-form input{
-width: 300px;
-    }
+    
 }
-@media only screen and (max-width:500px){
+
+@media only screen and (max-width:400px){
+    .blog-page-hero-section-author p{
+        font-size: 12px;
+    }
+    .blog-page-hero-section-heading h1{
+        font-size: 24px;
+    }
+    .blog-page-hero-category{
+        font-size: 16px;
+    }
+    .blog-page-hero-section{
+        padding-top: 110px;
+        padding-bottom: 50px;
+    }
+    .blog-page-article-socials-description p, .blog-page-article-main-contents p{
+        font-size: 16px;
+    }
     .blog-newsletter-form input{
-        width: 200px;
-            }
-            .blog-newsletter-container-inner{
-                padding: 16px;
-            }
+        height: 30px;
+    }
+    .blog-newsletter-heading h1{
+        font-size: 18px;
+        text-align: center;
+    }
+    .blog-newsletter-container-inner{
+        padding: 24px 16px;
+    }
 }
