--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1,8 +1,10 @@
 :root {
   
   --h-text-b-clr:#1c1623;
+  --card-bg:#322a3b;
   --p-text-b-clr:#3f3f3f;
   --trafy-purple:#6D28D9;
+  --h-w-text:#fcf8fc;
   --h-text-w-clr:#fcfefe;
   --h-text-w-alt-clr:#fdfdfd;
   --p-text-w-clr:#e2e2e2;
